# myRaftKvStore

./: .gitignore  CMakeLists.txt  DPrintf改为spdlog总结.md  Git提交记录汇总.md  README.md  RPC增强功能总览.md  perf_flamegraph_guide.md  project_structure_explanation.md  simple_targeted_perf_test.sh  targeted_perf_test.sh  test.conf  ⚡代码修改对比速查.md  性能分析执行摘要.txt  提升摘要.txt  架构解耦优化方案.md  架构重构完成报告.md  简历项目描述.md  详细的针对性Perf分析报告.md  🎯完成总结-给面试官看.md  📚文档总索引.md  🚀快速开始-面试准备.md
config/: README_配置说明.md  test.conf  test_3nodes.conf  test_5nodes.conf  test_7nodes.conf  test_distributed.conf
docs/: README.md  RPC_COROUTINE_INTEGRATION.md  RPC_QUICK_START.md  RPC协程集成说明.md  RPC压缩集成示例代码.txt  压缩优化快速参考.md  数据压缩优化方案.md  日志系统调试详解.md  连接池与健康检查机制.md  连接池快速开始.md  项目结构重组报告.md  📖项目改动与阅读指南.md
docs/architecture/: 重构验证指南.md
docs/git-logs/: CHANGES_SUMMARY.md  CHANGES_SUMMARY_TASK23.md  Git提交快速查找卡.md  今日修改记录.md
docs/interview/: 面试技术报告完整版.md  🎊完整任务完成报告.md
docs/logging/: DPrintf改为spdlog修改报告.md
docs/performance/: COMPRESSION_OPTIMIZATION_SUMMARY.md  📋数据压缩集成完整报告.md
docs/quick-start/: README_重构说明.md  项目修改总结和运行指南.md
docs/testing/: 调试指南.md
example/: connection_pool_example.cpp  rpc_coroutine_example.cpp
example/raftCoreExample/: raftKvDB.cpp
example/rpcExample/callee/: CMakeLists.txt
example/rpcExample/caller/: CMakeLists.txt
manual_test_results/: consensus_node0_report.txt  log_io_perf_report.txt
src/common/: compressor.cpp  logger.cpp  util.cpp
src/common/include/: IKvRpcClient.h  ILoadBalancer.h  IPersistenceLayer.h  IRaftRpcChannel.h  IStateMachine.h  IStorageEngine.h  compressor.h  logger.h  util.h
src/fiber/include/: timer.hpp
src/raftClerk/: clerk.cpp
src/raftClerk/include/: KvRpcClientAdapter.h  RoundRobinLoadBalancer.h  clerk.h
src/raftCore/: Persister_new.cpp  kvServer.cpp  raft_compression_notes.txt
src/raftCore/include/: KvStateMachine.h  Persister.h  PersisterAdapter.h  RaftRpcAdapter.h  kvServer.h
src/raftRpcPro/: kvServerRPC.proto  raftRPC.proto
src/rpc/: CMakeLists.txt  connectionpool.cpp  mprpcchannel.cpp  rpcheader.proto  rpcprovider.cpp
src/rpc/include/: connectionpool.h  mprpcchannel.h
src/rpc/src/rpc/: rpcheader.pb.cc  rpcheader.pb.h
src/skipList/include/: SkipListStorageEngine.h
targeted_perf_results/session_20251028_171506/01_network_layer/: network_perf_report.txt
性能提升/: manual_perf_test.sh  提升.md  针对性perf测试说明.md
性能提升/manual_test_results/: client4_output.txt  consensus_node1_report.txt  network_perf_report.txt  strace_node0.txt
性能提升/targeted_perf_results/session_20251028_171250/01_network_layer/: network_perf_report.txt
所有测试/: DETAILED_TEST_PROCESS_LOG.md  FINAL_PERFORMANCE_ANALYSIS_REPORT.md  QUICK_VIEW_GUIDE.txt  comprehensive_performance_test.sh  kv_raft_performance_analysis.md  kv_raft_performance_test.cpp  raft_stress_test_suite.cpp  simple_stress_test.cpp  stress_test.cpp  协程化改造简要总结.txt  性能测试使用指南.md  测试执行摘要.md  测试文件协程化改造总结.md
所有测试/perf_results_comprehensive/: perf_20251028_125843.folded  perf_flamegraph_20251028_125843.data
所有测试/test_results_comprehensive/session_20251028_125843/: 01_cpu_stress.txt  COMPREHENSIVE_TEST_REPORT.md
所有测试/压测/: fiber_stress_test.cpp  perf_test_runner.sh
所有测试/压测/perf_results_comprehensive/: perf_cpu_20251028_125843.data  perf_cpu_report_20251028_125843.txt  perf_script_20251028_125843.txt
所有测试/压测/test_results_comprehensive/session_20251028_125843/: 02_hook_test.txt  03_iomanager_test.txt  04_system_resources.txt  07_io_performance.txt
